# KrishiMitra

./: .gitignore  ICRISAT-District Level Data.csv  README.md  README_FASTAPI.md  config.env  data.csv  main.py  requirements.txt  requirements_fastapi.txt  test_basic.py  variety_traits_template.csv
ai/: .gitignore  Makefile  README.md  pyproject.toml
ai/data/features/: README.md
ai/data/raw/: README.md
ai/nlu/: data_augment.py  eval_joint.py  export_tflite.py  schema.yaml  tokenization.py  train_joint.py  utterances.jsonl
ai/nlu/gazetteers/: crops.txt
ai/packaging/: runtime_edge.py
ai/scripts/: setup.sh
ai/tests/: test_decoding.py  test_tokenization.py
artifacts/cluster/9a6a3d94-607d-4342-a415-af9ebb8a0705/: X.npy  assignments.csv  config.json  features.json  metrics.json  model.joblib  projector.joblib  scaler.joblib
client/: README.md  index.html  package-lock.json  package.json
client/src/: App.tsx  config.ts  index.css
client/src/components/: Layout.tsx
client/src/contexts/: AuthContext.tsx
client/src/pages/: AIAssistant.tsx  AuthPage.tsx  Cluster.tsx  Dashboard.tsx  FarmerProfile.tsx  GovernmentSchemes.tsx  IrrigationWeather.tsx  LandingPage.tsx  MarketPrice.tsx  Marketplace.tsx  PestDisease.tsx  SeedVariety.tsx
crop_yield_predictor/: data_loader.py  features.py  models.py
crop_yield_predictor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
routers/: cluster.py  seedrec.py
scripts/: gen_sample_climate.py
server/: setup.py
server/app/: README_SEED_RECOMMENDER.md  Table_2.6_List_of_field_crops_varieties_hybrids_released_and_notified_during_2007-2011.csv  app.py  main.py  pyproject.toml  requirements_seedrec.txt  sample_climate_data.csv
server/app/ai/: Makefile  pyproject.toml
server/app/ai/data/features/: README.md
server/app/ai/nlu/: __init__.py  eval_joint.py  export_tflite.py  tokenization.py  train_joint.py
server/app/ai/nlu/gazetteers/: stages.txt
server/app/ai/tests/: test_decoding.py
server/app/cli/: recommend_cli.py
server/app/crop_yield_predictor/: __init__.py  cli.py  utils.py
server/app/crop_yield_predictor.egg-info/: top_level.txt
server/app/data/: variety_traits.csv
server/app/routers/: cluster.py  seedrec.py
server/app/services/: cluster_service.py  seedrec_service.py  yield_infer.py
server/app/src/seedrec/: traits.py
services/: cache.py  cluster_service.py  data_access.py  seedrec_service.py  traits_service.py
src/seedrec/: __init__.py  recommend.py  scoring.py
tests/: test_fastapi.py  test_seedrec.py
